# vibration-ai

./: CMakeLists.txt  readme.md
include/: NeuralNetwork.h  Vizualization.h  constants.h
src/: NeuralNetwork.cpp  TrainigDataGenerator.cpp  Vizualization.cpp  main.cpp
